# simplerandom

./: .gitignore  .hgeol  .hgignore  .hgtags  LICENSE.txt  README.md
c/: marsaglia-rng.c  simplerandom.c  simplerandom.h  test.c
c/c++/: test.cpp
c/lecuyer/: lfsr113.c  lfsr113.h  lfsr88.c  lfsr88.h  test.c
c/marsaglia/: marsaglia-rng.c
c/simplerandom/: Makefile.am  _timesys.mak  bitcolumnmatrix.c  bitcolumnmatrix.h  configure.ac  maths.c  maths.h  pow.c  pow.h  simplerandom-c.h  simplerandom-cpp.h  simplerandom-discard.c  simplerandom-jumpahead.c  simplerandom.c  simplerandom.h  simplerandom.pc.in  test.c
c/simplerandom/simplerandom/: bitcolumnmatrix.h  maths.h  tools.h
c/simplerandom/tests/: build_test_testu01  build_test_testu01.bat  test-wrapper-c.h  test_cpp_simple.cpp  test_runner.h  test_simple.c  test_testu01.c  test_testu01.txt
c/simplerandom/tests/results/: test_testu01_bigcrush_kiss.txt  test_testu01_bigcrush_kiss2.txt  test_testu01_bigcrush_lfsr113.txt  test_testu01_bigcrush_lfsr88.txt  test_testu01_bigcrush_mwc2.txt  test_testu01_bigcrush_mwc64.txt
python/: MANIFEST.in  README.rst  README.txt  pyproject.toml  setup.py  simplerandom.py  simplerandomcython.pyx  test.py
python/_version/: __init__.py
python/cython/: _bitcolumnmatrix_cython.c  _bitcolumnmatrix_cython.pyx  _iterators_cython.c  _iterators_cython.pyx  types.h
python/python2/cython/: _iterators_cython.c  _iterators_cython.pyx  types.h
python/python2/simplerandom/: __init__.py
python/python2/simplerandom/_bitcolumnmatrix/: __init__.py  _bitcolumnmatrix_py.py
python/python2/simplerandom/iterators/: __init__.py  _bitcolumnmatrix.py  _iterators_py.py  geomseries.py  test.py
python/python2/simplerandom/random/: __init__.py  _random_py.py
python/python3/simplerandom/: __init__.py
python/python3/simplerandom/iterators/: __init__.py
python/src/simplerandom/_version/: __init__.py
python/src/simplerandom/iterators/: _iterators_py.py  test.py
python/src/simplerandom/random/: __init__.py  _random_py.py
python/test/: test_iterators.py
references/: marsaglia-rng.html  sci_stat_math_19990112_0937_marsaglia.html  sci_stat_math_19990115_1141_marsaglia.html  sci_stat_math_19990120_1055_marsaglia.html  sci_stat_math_19990120_2208_marsaglia.html  sci_stat_math_199901_marsaglia_urls.txt
support/find_cycles/: find_cycles.cpp  find_cycles.py  find_cycles.pyx  run_find_cycles.py  setup.py
support/lfsr_seed_test/: lfsr_seed_test.c
support/mwc_tests/: build  build.bat  mwc_tests.c
