dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.68)
AC_INIT([simplerandom], [0.6.0]) #set project name and version
AC_PROG_CC

#AC_CANONICAL_SYSTEM

# Put configuration results here, so we can easily #include them:
AC_CONFIG_HEADERS([config.h])

# Put autotools auxiliary files in subdirectories to reduce clutter:
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])

# library version as current:revision:age
# http://www.gnu.org/software/libtool/manual/html_node/Updating-version-info.html
AC_SUBST([LIB_SO_VERSION], [6:0:1])

# Enable "automake" to simplify creating makefiles:
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_CONFIG_FILES([Makefile
		simplerandom.pc])

#dnl this allows us specify individual linking flags for each target
AM_PROG_CC_C_O 

dnl Initialize Libtool
LT_INIT

dnl Check if Libtool is present
dnl Libtool is used for building share libraries 
AC_PROG_LIBTOOL

AC_OUTPUT

